k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: boothflow-backend-service
  namespace: boothflow

spec:
  selector:
    app: boothflow-backend

  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080

  type: NodePort
